# storymaker

./: .gitignore  Cargo.toml  Makefile  README.md  core.ts  deno.json  index.ts
.sandbox/bevy/: main.rs
.sandbox/deno/.scripts/: dumpProduction.ts
.sandbox/pathfinding/: Cargo.toml
.sandbox/pathfinding/src/: find_path.rs  nearest_path.rs
.sandbox/rust/: Cargo.toml
.sandbox/rust/src/: main.rs  map.rs  time.rs  world.rs
.sandbox/tokio/src/: actions.rs  actors.rs  main.rs  time.rs
.sandbox/yml/.schemas/: attributes.json
.scripts/: dump.ts  generateIndexes.ts  init.sh
.scripts/hooks/: pre-commit
assets/names/: family.txt  females.txt  males.txt
assets/worlds/: island1.json
attributes/: birthday.yml  gender.yml
jobs/: baker.yml
jobs/nature/: viticulturist.yml
objects/: door.ts  index.ts  key.ts
objects/energy/: solarPanel.ts
objects/house/: door.ts  key.ts
objects/resources/: stone.ts  water.ts  wood.ts
prototype/: index.html  package.json  tsconfig.app.json  vite.config.ts
prototype/src/: app.tsx  index.css  server.ts  start.tsx  utils.ts
src/: actions.rs  actor.rs  actors.rs  camera.rs  characters.rs  core.ts  game.rs  global.rs  main.rs  map.rs  mod.ts  pathfinding.rs  tiled.rs  time.rs  ui.rs  world.rs
src/actors/: mod.rs
src/brain/: constants.rs  mod.rs
src/characters/: component.rs  mod.rs  relationships.rs  spawner.rs
src/controls/: camera.rs  mod.rs  speed.rs
src/core/: characters.rs  markers.rs  mod.rs  pathfinding.rs  types.ts  world.rs
src/examples/: map.rs
src/objects/: index.ts  mod.ts
src/simulation/: mod.rs  pathfinding.rs  world.rs
src/time/: clock.rs  history.rs  mod.rs  speed.rs  tick.rs  timer.rs
src/ui/: clock.rs  mod.rs  sidebar.rs
src/world/: map.rs  markers.rs  mod.rs  pathfinding.rs  ressource.rs
worlds/: Cargo.toml
worlds/src/: main.rs
(+70 files in other folders)
