[package]
name = "storymaker"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "png",
  "x11",
] }
bevy_ecs_tilemap = "0.11"
bevy_egui = "0.21.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"

[replace]
"bevy_ecs_tilemap:0.11.0" = { git = 'https://github.com/StarArawn/bevy_ecs_tilemap' }
